--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.11",
     "styled-icons": "^10.45.0",
     "web-vitals": "^2.1.4"
   },
