fix: change homepage link

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "forever-baby",
-  "homepage": "https://gitname.github.io/FOREVER-BABY",
+  "homepage": "https://danielbped.github.io/forever-baby",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
